[gd_scene load_steps=3 format=2]

[ext_resource path="res://Controllers/GuitarClicker/GuitarBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Controllers/GuitarClicker/GuitarBars.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
scale = Vector2( 2, 2.5 )
script = ExtResource( 2 )

[node name="Bar" parent="." instance=ExtResource( 1 )]
margin_left = 3.0
margin_top = -310.0
margin_right = 51.0
margin_bottom = -0.399994

[node name="Bar2" parent="." instance=ExtResource( 1 )]
margin_left = 54.0
margin_top = -310.0
margin_right = 102.0
margin_bottom = 0.0

[node name="Bar3" parent="." instance=ExtResource( 1 )]
margin_left = -51.0
margin_top = -310.0
margin_right = -3.0
margin_bottom = 0.0

[node name="Bar4" parent="." instance=ExtResource( 1 )]
margin_left = -102.5
margin_top = -310.0
margin_right = -54.5
margin_bottom = -0.399994
